登录按钮样式修改

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" type="img/x-icon" href="./static/xiaocar.png">
     <link rel="stylesheet" href="./static/css/iconfont.css">
     <link rel="stylesheet" href="./static/css/bootstrap.css">
      <script src="./static/js/jquery-1.11.3.js"></script>
-    <title>geely</title>
+    <title>car shop</title>
   </head>
   <body>
     <div id="app"></div>
